crates/thread_aware_macros_impl/src/snapshots/thread_aware_macros_impl__tests__thread_safe_derive_with_derive_and_where_clause.snap
---
source: crates/thread_aware_macros_impl/src/lib.rs
expression: derive(input)
---
impl<T: ::thread_aware::ThreadAware> ::thread_aware::ThreadAware for Wrapper<T>
where
    T: Debug + Clone,
{
    #[allow(
        clippy::redundant_clone,
        reason = "macro generated pattern moves each field once"
    )]
    fn relocated(
        self,
        source: ::thread_aware::MemoryAffinity,
        destination: ::thread_aware::MemoryAffinity,
    ) -> Self {
        let Self { value } = self;
        Self {
            value: ::thread_aware::ThreadAware::relocated(value, source, destination),
        }
    }
}
