crates/thread_aware_macros_impl/src/snapshots/thread_aware_macros_impl__tests__union_simple.snap
---
source: crates/thread_aware_macros_impl/src/lib.rs
expression: derive(input)
---
::core::compile_error! {
    "#[derive(ThreadAware)] does not support unions"
}
